<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp">




    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFFFBB33"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@color/BlueBo" />

        <EditText
            android:id="@+id/old_password_edit"
            android:layout_width="match_parent"
            android:paddingLeft="15sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/old_password_res"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/new_password_edit"
            android:layout_width="match_parent"
            android:paddingLeft="15sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/new_password_res"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/re_new_password_edit"
            android:layout_width="match_parent"
            android:paddingLeft="15sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/conform_password_res"
            android:inputType="textPassword" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>