<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_4"
    tools:context=".School.AddNewStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/add_member_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_baseline_person_pin_24" />

            <TextView
                android:id="@+id/textViewNavigate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_student_res"
                android:textColor="#FFFFFF"
                android:textSize="26dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/User_button"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@drawable/ic_person_24dp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">



            <EditText
                android:id="@+id/name_add_student"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="7dp"
                android:drawableLeft="@drawable/ic_person_24dp"
                android:drawablePadding="8dp"
                android:background="@drawable/btn_shape2"
                android:hint="@string/name_add_student_res"
                android:inputType="textNoSuggestions"
                android:textColorHint="@color/white"
                android:textSize="18sp" />



            <EditText
                android:id="@+id/user_phone_add_student"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/btn_shape2"
                android:hint="@string/phone_add_new_student_res"
                android:inputType="textNoSuggestions"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/ic_phone_iphone_black_24dp"
                android:drawablePadding="8dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/age_add_student"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/btn_shape2"
                android:hint="@string/age_add_student_res"
                android:inputType="textNoSuggestions"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/ic_baseline_all_inclusive_24"
                android:drawablePadding="8dp"
                android:textSize="18sp" />



            <EditText
                android:id="@+id/blood_type_add_student"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/btn_shape2"
                android:hint="@string/blood_type_add_student_res"
                android:inputType="textNoSuggestions"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/ic_baseline_opacity_24"
                android:drawablePadding="8dp"
                android:textSize="18sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/conf_butt"
                android:layout_width="250dp"
                android:layout_height="43dp"
                android:background="@drawable/squar_shape02_circle"
                android:text="Conform"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <Button
                android:id="@+id/bktomain"
                android:layout_marginTop="30dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_arrow_back_black_24dp" />





        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>