<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3"
    tools:context=".Student.StudentProfileActivity"
    tools:ignore="MissingDefaultResource">


    <LinearLayout
        android:id="@+id/head_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/profil_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/notification_icon_student"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/ic_allarm_profile"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/headline_title_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="15dp"
            android:text="Student"
            android:textColor="#F6FAFA"
            android:textSize="25sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/btn_Signout_student"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_exit_to_app_black_24dp"
            app:layout_constraintEnd_toEndOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/profil_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/head_section"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_img_profile_student"
                android:layout_width="90dp"
                android:layout_height="110dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person_outline_black_24dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="163dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name_view_profile_student"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_person_24dp"
                        android:drawablePadding="10dp"
                        android:text="Name" />

                    <TextView
                        android:id="@+id/email_view_profile_student"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_email_24dp"
                        android:drawablePadding="10dp"
                        android:text="@string/email_profil" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/btn_setting_profile_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_shape"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_settings_black_24dp"
                        android:text="@string/setting_profile" />

                    <View
                        android:layout_width="16dp"
                        android:layout_height="42dp" />

                    <Button
                        android:id="@+id/btn_edit_profile_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:background="@drawable/btn_shape"
                        android:drawableLeft="@drawable/ic_edit_24dp"
                        android:text="@string/edit_setting" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_menu_student"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/profil_section">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/health_btn_student"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="start"
                android:background="@drawable/favorite_icon_school_background"
                android:padding="12dp"
                android:src="@drawable/ic_favorite_black_24dp" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:gravity="start"
                android:text="Health"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/student_location_student"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="start"
                android:background="@drawable/location_icon_school_background"
                android:padding="12dp"
                android:src="@drawable/ic_location_on_black_24dp" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:gravity="start"
                android:text="Students Location"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_menu_student"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/go_back_profile_student"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>